# playlist-transfer-tool

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
docs/: configuration.md  playlist-workflow.md
fixtures/: README.md  mock-catalog.json  mock-playlists.json  qqmusic-public-playlist.json  qqmusic-search-catalog.json  spotify-public-playlist.json  spotify-search-catalog.json  spotify-search-results.json
scripts/: create_qqmusic_credential.py  reset_write_status.py
src/playlist_porter/: __init__.py  cli.py  config.py  config_validation.py  diagnostics.py  logging_config.py  models.py  normalization.py  progress.py  workflow.py
src/playlist_porter/matching/: candidates.py  scoring.py  status.py
src/playlist_porter/persistence/: __init__.py  database.py  exports.py  repositories.py
src/playlist_porter/rate_limit/: __init__.py  policies.py
tests/unit/: test_cli_logging.py  test_models.py  test_normalization.py  test_phase2_matching.py  test_phase3_persistence.py  test_phase4_cli_workflow.py  test_phase5_rate_limit.py  test_phase6_spotify_adapter.py  test_phase6_spotify_config.py  test_phase7_qqmusic_adapter.py  test_phase8_transfer_execution.py  test_phase9_release_readiness.py  test_qqmusic_login_helper.py  test_qqmusic_public_fixture.py  test_qqmusic_search_catalog_fixture.py  test_replay_search_fixtures.py  test_reset_write_status_script.py  test_review_action_aliases.py  test_review_candidate_context.py  test_smoke.py  test_spotify_public_fixture.py  test_spotify_search_catalog_fixture.py
(+4 files in other folders)
