[project]
name = "playlist-transfer-tool"
version = "0.1.0"
description = "CLI-first one-way playlist transfer tooling for Spotify and QQ Music."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-or-later"
authors = [
    { name = "Playlist Transfer Tool Contributors" },
]
dependencies = [
    "loguru>=0.7.3",
    "opencc-python-reimplemented>=0.1.7",
    "pydantic>=2.12.0",
    "qqmusic-api-python>=0.0.4",
    "rapidfuzz>=3.14.0",
    "requests>=2.32.0",
    "requests-ratelimiter>=0.7.0",
    "rich>=14.0.0",
    "spotipy>=2.25.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "vcrpy>=7.0.0",
]

[project.scripts]
playlist-porter = "playlist_porter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playlist_porter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
